--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Yuriy Kazmirchuk</title>
+    <title>Yuriy Kaz</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is my new web site for practicing.">
@@ -67,7 +67,7 @@
         <img class="ion-icon" src="icons/person-circle.svg"></img>
         <a class="footer-link" href="https://yuriykaz.github.io/cv/">Website</a>
 
-        <p class="copyright">© 2021 Yuriy Kazmirchuk.<br>Made with <span id="heart">♥</span></p>
+        <p class="copyright">© 2021 YuriyKaz.<br>Made with <span id="heart">♥</span></p>
     </div>
 
 
