Updated some files.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <img class="ion-icon" src="icons/person-circle.svg"></img>
         <a class="footer-link" href="https://yuriykaz.github.io/cv/">Website</a>
 
-        <p class="copyright">© 2021 YuriyKaz.<br>Made with <span id="heart">♥</span></p>
+        <p class="copyright">© 2021 YuriyKaz<br>Made with <span id="heart">♥</span></p>
     </div>
 
 
